crates/moss/tests/snapshots/cli_snapshots__help_analyze_callees.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 267
expression: "snapshot_help(&[\"analyze\", \"callees\"])"
---
Show what functions a symbol calls

Usage: moss analyze callees [OPTIONS] <SYMBOL>

Arguments:
  <SYMBOL>  Symbol to find callees for

Options:
  -i, --case-insensitive   Case-insensitive symbol matching
      --json               Output as JSON
      --jq <EXPR>          Filter JSON output with jq expression (implies --json)
  -r, --root <ROOT>        Root directory (defaults to current directory)
      --exclude <PATTERN>  Exclude paths matching pattern or @alias
      --pretty             Human-friendly output with colors and formatting
      --compact            Compact output without colors (overrides TTY detection)
      --only <PATTERN>     Include only paths matching pattern or @alias
      --diff [<BASE>]      Analyze only files changed since base ref (e.g., main, HEAD~1) If no BASE given, defaults to origin's default branch
  -h, --help               Print help
