crates/moss/tests/snapshots/cli_snapshots__help_analyze_check_refs.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 277
expression: "snapshot_help(&[\"analyze\", \"check-refs\"])"
---
Check documentation references for broken links

Usage: moss analyze check-refs [OPTIONS]

Options:
      --json               Output as JSON
      --jq <EXPR>          Filter JSON output with jq expression (implies --json)
  -r, --root <ROOT>        Root directory (defaults to current directory)
      --exclude <PATTERN>  Exclude paths matching pattern or @alias
      --pretty             Human-friendly output with colors and formatting
      --compact            Compact output without colors (overrides TTY detection)
      --only <PATTERN>     Include only paths matching pattern or @alias
      --diff [<BASE>]      Analyze only files changed since base ref (e.g., main, HEAD~1) If no BASE given, defaults to origin's default branch
  -h, --help               Print help
