crates/moss/tests/snapshots/cli_snapshots__help_analyze_duplicate_functions.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 292
expression: "snapshot_help(&[\"analyze\", \"duplicate-functions\"])"
---
Detect duplicate functions (code clones)

Usage: moss analyze duplicate-functions [OPTIONS]

Options:
      --elide-identifiers      Elide identifier names when comparing (default: true)
      --elide-literals         Elide literal values when comparing
      --show-source            Show source code for detected duplicates
      --min-lines <MIN_LINES>  Minimum lines for a function to be considered [default: 1]
      --allow <LOCATION>       Allow a duplicate function group (add to .moss/duplicate-functions-allow) Accepts file:symbol (e.g., src/foo.rs:my_func) or file:start-end (e.g., src/foo.rs:10-20)
      --reason <REASON>        Reason for allowing
      --json                   Output as JSON
      --jq <EXPR>              Filter JSON output with jq expression (implies --json)
  -r, --root <ROOT>            Root directory (defaults to current directory)
      --exclude <PATTERN>      Exclude paths matching pattern or @alias
      --pretty                 Human-friendly output with colors and formatting
      --compact                Compact output without colors (overrides TTY detection)
      --only <PATTERN>         Include only paths matching pattern or @alias
      --diff [<BASE>]          Analyze only files changed since base ref (e.g., main, HEAD~1) If no BASE given, defaults to origin's default branch
  -h, --help                   Print help
