crates/moss/tests/snapshots/cli_snapshots__help_analyze_rules.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 317
expression: "snapshot_help(&[\"analyze\", \"rules\"])"
---
Run syntax rules from .moss/rules/*.scm

Usage: moss analyze rules [OPTIONS] [TARGET]

Arguments:
  [TARGET]  Target directory to scan

Options:
      --rule <RULE>        Run only this specific rule
      --list               List available rules without running them
      --fix                Auto-fix issues that have fixes available
      --sarif              Output in SARIF format for IDE integration
      --debug <DEBUG>      Enable debug output (comma-delimited: timing, all)
      --json               Output as JSON
      --jq <EXPR>          Filter JSON output with jq expression (implies --json)
  -r, --root <ROOT>        Root directory (defaults to current directory)
      --exclude <PATTERN>  Exclude paths matching pattern or @alias
      --pretty             Human-friendly output with colors and formatting
      --compact            Compact output without colors (overrides TTY detection)
      --only <PATTERN>     Include only paths matching pattern or @alias
      --diff [<BASE>]      Analyze only files changed since base ref (e.g., main, HEAD~1) If no BASE given, defaults to origin's default branch
  -h, --help               Print help
